# BA_Industrial-Robot-API-with-ROS2

src/robco_description/: CMakeLists.txt  package.xml
src/robco_description/launch/: gazebo_launch.py
src/robco_description/meshes/0001_D86/: D86-legacy-distal.stl  D86-legacy-distal_convdec.stl  D86-legacy-proximal.stl  D86-legacy-proximal_convdec.stl
src/robco_description/meshes/0002_D116/: D116-legacy_distal.stl  D116-legacy_distal_convexDecompose.stl
src/robco_description/meshes/0003_D116/: D116-legacy_distal.stl  D116-legacy_proximal.stl  D116-legacy_proximal_convexDecompose.stl
src/robco_description/meshes/0005_I86-150/: I86-150.stl  I86-150_convdec.stl
src/robco_description/meshes/0006_I86-200/: I86-200.stl  I86-200_convdec.stl
src/robco_description/meshes/0007_I86-300/: I86-300.stl  I86-300_convdec.stl
src/robco_description/meshes/0008_I86-400/: I86-400.stl  I86-400_convdec.stl
src/robco_description/meshes/0009_I86-500/: I86-500.stl  I86-500_convdec.stl
src/robco_description/meshes/0010_I86-600/: I86-600.stl  I86-600_convdec.stl
src/robco_description/meshes/0011_I86-700/: I86-700.stl  I86-700_convdec.stl
src/robco_description/meshes/0012_L86-150/: L86-150.stl  L86-150_convdec.stl
src/robco_description/meshes/0013_L86-200/: L86-200.stl  L86-200_convdec.stl
src/robco_description/meshes/0014_L86-300/: L86-300.stl  L86-300_convdec.stl
src/robco_description/meshes/0015_L86-400/: L86-400.stl  L86-400_convdec.stl
src/robco_description/meshes/0016_L86-500/: L86-500.stl  L86-500_convdec.stl
src/robco_description/meshes/0017_L86-600/: L86-600.stl  L86-600_convdec.stl
src/robco_description/meshes/0018_L86-700/: L86-700.stl  L86-700_convdec.stl
src/robco_description/meshes/0020_L116-400/: L116-400.stl  L116-400_convdec.stl
src/robco_description/meshes/0021_L86-183/: L86-183.stl  L86-183_convdec.stl
src/robco_description/meshes/0021_L86-186/: L86-186_convdec.stl
src/robco_description/meshes/0022_L86-283/: L86-283.stl  L86-283_convdec.stl
src/robco_description/meshes/0022_L86-286/: L86-286_convdec.stl
src/robco_description/meshes/0023_I86-250/: I86-250.stl  I86-250_convdec.stl
src/robco_description/meshes/0024_L116-1000/: L116-1000.stl  L116-1000_convdec.stl
src/robco_description/meshes/0025_L116-448/: L116-448.stl  L116-448_convdec.stl
src/robco_description/meshes/0026_L116-348/: L116-348.stl  L116-348_convdec.stl
src/robco_description/meshes/0027_L116-500/: L116-500.stl  L116-500_convdec.stl
src/robco_description/meshes/0028_L116-600/: L116-600.stl  L116-600_convdec.stl
src/robco_description/meshes/0029_L116-800/: L116-800.stl  L116-800_convdec.stl
src/robco_description/meshes/0030_L116-200/: L116-200.stl  L116-200_convdec.stl
src/robco_description/meshes/0031_L86-55/: L86-55.stl  L86-55_convdec.stl
src/robco_description/meshes/0032_L86-383/: L86-383.stl  L86-383_convdec.stl
src/robco_description/meshes/0033_I86-141/: I86-141.stl  I86-141_convdec.stl
src/robco_description/meshes/0034_I86-350/: I86-350.stl  I86-350_convdec.stl
src/robco_description/meshes/0035_L86-336/: L86-336.stl  L86-336_convdec.stl
src/robco_description/meshes/0036_L86-250/: L86-250.stl  L86-250_convdec.stl
src/robco_description/meshes/0037_D86/: D86-legacy-distal.stl  D86-legacy-distal_convdec.stl  D86-legacy-proximal.stl  D86-legacy-proximal_convdec.stl
src/robco_description/meshes/0038_D116/: D116-legacy_distal.stl  D116-legacy_distal_convexDecompose.stl  D116-legacy_proximal.stl  D116-legacy_proximal_convexDecompose.stl
src/robco_description/meshes/0039_D86/: D86-legacy-distal.stl  D86-legacy-distal_convdec.stl  D86-legacy-proximal.stl  D86-legacy-proximal_convdec.stl
src/robco_description/meshes/0040_D86/: D86-legacy-distal.stl  D86-legacy-distal_convdec.stl  D86-legacy-proximal.stl  D86-legacy-proximal_convdec.stl
src/robco_description/meshes/0041_D86/: D86-legacy-distal.stl  D86-legacy-distal_convdec.stl  D86-legacy-proximal.stl  D86-legacy-proximal_convdec.stl
src/robco_description/meshes/0042_D86/: D86-legacy-distal.stl  D86-legacy-distal_convdec.stl  D86-legacy-proximal.stl  D86-legacy-proximal_convdec.stl
src/robco_description/meshes/0043_D86/: D86-legacy-distal.stl  D86-legacy-distal_convdec.stl  D86-legacy-proximal.stl  D86-legacy-proximal_convdec.stl
src/robco_description/meshes/0044_D116/: D116-legacy_distal.stl  D116-legacy_distal_convexDecompose.stl  D116-legacy_proximal.stl  D116-legacy_proximal_convexDecompose.stl
src/robco_description/meshes/0045_D116/: D116-legacy_distal.stl  D116-legacy_distal_convexDecompose.stl  D116-legacy_proximal.stl  D116-legacy_proximal_convexDecompose.stl
src/robco_description/meshes/0046_D148/: D148-November_distal.stl  D148-November_distal_convexDecompose.stl  D148-November_proximal.stl  D148-November_proximal_convexDecompose.stl
src/robco_description/meshes/0047_L148-1000/: L148-1000.stl  L148-1000_convdec.stl
src/robco_description/meshes/0049_I116-1000/: I116-1000.stl  (+1 more)
src/robco_description/urdf/: demo_robot.xacro  handeye.xacro  rg2.xacro  robco_modules_base.xacro
src/robco_description/worlds/: my_world.sdf
src/robco_hw/: CMakeLists.txt  package.xml  robco_hw.xml
src/robco_hw/config/: control.yaml
src/robco_hw/launch/: robco_real.launch.py  sim_gazebo.launch.py
src/robco_hw/src/: robco_hw.cpp
src/robco_planning/: CMakeLists.txt  package.xml
src/robco_planning/src/: angle_speed.cpp  end_speed.cpp  robco_circle.cpp  robco_planning.cpp
src/robcomm/: CMakeLists.txt  package.xml
src/robcomm/src/: robot.cpp  robot_messages.cpp
(+267 files in other folders)
